Bug 476757 - Moving Panel to a position where it should immediately de-float or become opaque due to positions of windows doesn't make it do so until plasmashell is restarted
Summary: Moving Panel to a position where it should immediately de-float or become opa...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-11-09 15:40 UTC by Nate Graham
Modified: 2023-11-20 11:06 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Doesn't de float after being moved somewhere where it should de-float immediately (3.63 MB, video/webm)
2023-11-14 22:24 UTC, Nate Graham
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2023-11-09 15:40:02 UTC
Plasma 6 git master Wayland, number and configuration of screens is not relevant here.


STEPS TO REPRODUCE
1. Have a panel in Floating and Adaptive modes (i.e. so that it de-floats and becomes opaque when touched by windows
2. Move it to the left screen edge
3. Restart plasmashell
4. Side-tile all windows to the left screen edge, such that the right side of the screen is empty of windows
5. Move the panel to the right screen edge, and see that it de-floats and becomes translucent
6. Move the panel back to the left screen edge


OBSERVED RESULT
The panel remains floating and translucent


EXPECTED RESULT
The panel immediately de-floats and becomes opaque


ADDITIONAL INFORMATION
When the panel gets into this state, restarting plasmashell makes it behave correctly again.
Comment 1 Niccolò Venerandi 2023-11-12 10:31:37 UTC
Cannot reproduce; could you include a video?
Comment 2 Nate Graham 2023-11-14 22:24:32 UTC
Created attachment 163170 [details]
Doesn't de float after being moved somewhere where it should de-float immediately

Attached. Are you trying to reproduce it on Wayland or X11? Maybe it's Wayland-specific.
Comment 3 Bug Janitor Service 2023-11-16 14:00:52 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kwindowsystem/-/merge_requests/133
Comment 4 Marco Martin 2023-11-16 15:42:39 UTC
feels like it can be the same root cause with https://bugs.kde.org/show_bug.cgi?id=475539
Comment 5 Niccolò Venerandi 2023-11-20 11:06:42 UTC
Git commit 2ecfd25bcc1b817921eb15d77dfe0d9781b96028 by Niccolò Venerandi.
Committed on 20/11/2023 at 12:06.
Pushed by niccolove into branch 'master'.

Emit signal when showingDesktop changes in Wayland
Related: bug 475539, bug 476871

M  +1    -0    src/platforms/wayland/windowsystem.cpp

https://invent.kde.org/frameworks/kwindowsystem/-/commit/2ecfd25bcc1b817921eb15d77dfe0d9781b96028