Emit signal when showingDesktop changes in Wayland

BUG:476757
BUG:475539
BUG:476871
BUG:476961