src/platforms/wayland/windowsystem.cpp
@@ -34,7 +34,10 @@ public:
 
     void org_kde_plasma_window_management_show_desktop_changed(uint32_t state) override
     {
-        showingDesktop = state == show_desktop_enabled;
+        if ((state == show_desktop_enabled) != showingDesktop) {
+            KWindowSystem::self()->showingDesktopChanged(showingDesktop);
+            showingDesktop = state == show_desktop_enabled;
+        }
     }
 
     bool showingDesktop = false;
